hphp/test/zend/good/Zend/tests/errmsg_005.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/errmsg_005.php on line 10
